{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 113,
  "lineage": "6c209e8f-2eb4-8bce-1dc0-deac0edb8d17",
  "resources": [
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe23c115c3ba9bac",
            "arn": "arn:aws:ec2:us-east-2:925729574769:instance/i-05c7e19801d513e81",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "zentekprofile",
            "id": "i-05c7e19801d513e81",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09215cab726b37341",
            "private_dns": "ip-10-0-101-157.us-east-2.compute.internal",
            "private_ip": "10.0.101.157",
            "public_dns": "ec2-3-129-26-144.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.26.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c60695f577afc50c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031a31613ba4a5337",
            "tags": {
              "Name": "test-instance"
            },
            "tags_all": {
              "Name": "test-instance"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "test-instance"
            },
            "vpc_security_group_ids": [
              "sg-02c78b10e1113fd54"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.zentekprofile",
            "aws_iam_role.myrole",
            "data.aws_ami.amzlinux2",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925729574769:security-group/sg-02c78b10e1113fd54",
            "description": "Security group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-02c78b10e1113fd54",
            "ingress": [],
            "name": "public-sg-20220525213626597400000001",
            "name_prefix": "public-sg-",
            "owner_id": "925729574769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg"
            },
            "tags_all": {
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb43cfddfee65f77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2931469975",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02c78b10e1113fd54",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0",
              "1.1.1.1/32"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1202400575",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02c78b10e1113fd54",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0",
              "1.1.1.1/32"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-4198115234",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02c78b10e1113fd54",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925729574769:internet-gateway/igw-0627462ae823307fa",
            "id": "igw-0627462ae823307fa",
            "owner_id": "925729574769",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "mahen"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "mahen"
            },
            "vpc_id": "vpc-0cb43cfddfee65f77"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0627462ae823307fa",
            "id": "r-rtb-088d253e0816ae12e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-088d253e0816ae12e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925729574769:route-table/rtb-088d253e0816ae12e",
            "id": "rtb-088d253e0816ae12e",
            "owner_id": "925729574769",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Owner": "mahen"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Owner": "mahen"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb43cfddfee65f77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0151fda50b1937ecf",
            "route_table_id": "rtb-088d253e0816ae12e",
            "subnet_id": "subnet-031a31613ba4a5337"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925729574769:subnet/subnet-031a31613ba4a5337",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031a31613ba4a5337",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925729574769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-2a",
              "Owner": "mahen",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-2a",
              "Owner": "mahen",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0cb43cfddfee65f77"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925729574769:vpc/vpc-0cb43cfddfee65f77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02369de8a692109ac",
            "default_route_table_id": "rtb-02e87ef9733b22c63",
            "default_security_group_id": "sg-013dff0ace7b49e9b",
            "dhcp_options_id": "dopt-0e225dc3545aebc0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cb43cfddfee65f77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e87ef9733b22c63",
            "owner_id": "925729574769",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "mahen"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "mahen"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}